------
  [!] New plugin
  [+] New feature
  [*] Enhancement
  [-] Bug fix



------
  [!] Added new plugin for remote controlling
  [+] Added ability to show tabs at the bottom of the tab windows
  [+] Added support of XEP-0199 - XMPP Ping
  [+] Added maintenance history of visited conferences
  [+] Changes of contact status and entry/exit of participants in conference are stored in the history
  [*} Changed the format of the qoutes design
  [*] Server side archive preferences support is not longer required for retrieving messages history from server
  [*] Added ability to switch between tabs by shortkeys Alt+Number
  [*} Added ability to clear chat window
  [*] Added ability to optionaly display of status changes and entry/exit of users in conferences
  [-] When converting smileys into the text instead of the first key an arbitrary one was inserted
  [-] Contacts list window could be displayed outside the visible screen area
  [-] The roster window was closed by clicking on the tray even if it was inactive
  [-] Application fails when turn on or off the search in roster
  [-] It was impossible to set the empty status text
  [-] At an account the following sign to the global status could be lost after reconnection because of breakage of connection with a server
  [-] Windows with new messages does not always pop up on top of other windows
  [-] Application may fail on closing options dialog
  [-] Fixed problems displaying photos in vCard
  [-] Application may fail on unsuccessful attempt to connect
  [-] Not all history messages collections with the same start time was displayed in hisroty window
  [-] Recent messages with specified ThreadId could not be deleted from local archive
  [-] When closing the connection initiated by the server vacuum does not generate an error and re-reconnection was not started
  [-] Notification of arrival of the new message would not occur if the chat window was closed by clicking on the Windows taskbar

v1.0.2
------